--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@testing-library/react": "^13.3.0",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/react-test-renderer": "^18.0.0",
+    "babel-plugin-styled-components": "^2.0.7",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^28.1.2",
@@ -28,11 +30,14 @@
     "webpack-dev-server": "^4.9.3"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.25",
     "core-js": "^3.23.4",
     "jest-environment-jsdom": "^28.1.2",
     "raf": "^3.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-test-renderer": "^18.2.0",
+    "styled-components": "^5.3.5",
     "whatwg-fetch": "^3.6.2"
   }
 }
