--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "raf": "^3.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "react-test-renderer": "^18.2.0",
     "styled-components": "^5.3.5",
     "whatwg-fetch": "^3.6.2"
