--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
       "strict": true,
       "sourceMap": true,
       "target": "esnext",
-    },
+    }, 
+     "include": ["src/**/*"],
     "exclude": [
       "node_modules"
     ]
